<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#0099cc"
    tools:context="com.hal9000.musicplayerapp.FullscreenAboutActivity">

    <!-- The primary full-screen view. This can be replaced with whatever view
         is needed to present your content, e.g. VideoView, SurfaceView,
         TextureView, etc. -->
    <TextView
        android:id="@+id/fullscr_tv1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_gravity="center"
        android:layout_marginTop="52dp"
        android:gravity="center"
        android:keepScreenOn="true"
        android:rotation="-30"
        android:text="@string/s_fullscr_tv1"
        android:textColor="#2CFF00"
        android:textSize="30sp"
        android:textStyle="bold" />

    <TextView
        android:id="@+id/fullscr_tv2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentEnd="true"
        android:layout_below="@+id/fullscr_tv1"
        android:layout_gravity="center"
        android:gravity="center"
        android:keepScreenOn="true"
        android:rotation="30"
        android:text="@string/s_fullscr_tv2"
        android:textColor="#2CFF00"
        android:textSize="30sp"
        android:textStyle="bold" />

    <TextView
        android:id="@+id/fullscr_tv3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/fullscr_tv1"
        android:layout_gravity="center"
        android:layout_marginEnd="22dp"
        android:layout_marginTop="24dp"
        android:layout_toStartOf="@+id/fullscr_tv2"
        android:gravity="center"
        android:keepScreenOn="true"
        android:rotation="-45"
        android:text="@string/s_fullscr_tv3"
        android:textColor="#2CFF00"
        android:textSize="30sp"
        android:textStyle="bold" />

    <ImageView
        android:id="@+id/fullscreen_app_icon"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:gravity="center"
        android:keepScreenOn="true"
        android:src="@drawable/ic_fast_forward_green_50dp" />

    <TextView
        android:id="@+id/fullscr_tv4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_alignParentStart="true"
        android:layout_gravity="center"
        android:layout_marginBottom="39dp"
        android:gravity="center"
        android:keepScreenOn="true"
        android:text="@string/s_fullscr_tv4"
        android:textColor="#2CFF00"
        android:textSize="30sp"
        android:textStyle="bold" />



    <!-- This FrameLayout insets its children based on system windows using
         android:fitsSystemWindows. -->
    <!--
    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:fitsSystemWindows="true">

        <LinearLayout
            android:id="@+id/fullscreen_content_controls"
            style="?metaButtonBarStyle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="bottom|center_horizontal"
            android:background="@color/black_overlay"
            android:orientation="horizontal"
            tools:ignore="UselessParent">

            <Button
                android:id="@+id/dummy_button"
                style="?metaButtonBarButtonStyle"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/dummy_button" />

        </LinearLayout>
    </FrameLayout>
-->
</RelativeLayout>
